# vatic

./: .envrc  CHANGELOG.md  Cargo.toml  README.md  manifest.scm
.claude/skills/new-channel/: SKILL.md
.claude/skills/new-job/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/workflows/: build.yml  release.yml
container/: Dockerfile  build.sh
src/: error.rs  lib.rs  main.rs  run.rs
src/agent/: claude.rs  mod.rs  ollama.rs
src/channel/: email.rs  matrix.rs  mod.rs  stdin.rs  telegram.rs  whatsapp.rs
src/config/: dictionary.rs  mod.rs  secrets.rs  types.rs
src/daemon/: mod.rs  scheduler.rs
src/env/: guix.rs  guix_container.rs  local.rs  mod.rs  podman.rs
src/output/: channel.rs  command.rs  mod.rs  msmtp.rs  notification.rs
src/store/: mod.rs
src/template/: functions.rs  mod.rs  parser.rs  pipes.rs
