[package]
name = "vatic"
version = "0.1.0"
edition = "2021"
description = "TOML-configured AI agent framework with scheduled jobs, channel integrations, and templated prompts"
license = "GPL-3.0-only"
authors = ["Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/vatic"
homepage = "https://github.com/franzos/vatic"
keywords = ["ai", "agent", "automation", "llm", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[features]
default = []
whatsapp = [
    "dep:whatsapp-rust",
    "dep:wacore",
    "dep:waproto",
    "dep:whatsapp-rust-tokio-transport",
    "dep:whatsapp-rust-ureq-http-client",
    "dep:whatsapp-rust-sqlite-storage",
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"
serde_json = "1"
frankenstein = { version = "0.47", features = ["client-reqwest"] }
matrix-sdk = { version = "0.16", default-features = false, features = ["bundled-sqlite", "native-tls", "e2e-encryption"] }

# WhatsApp channel (requires nightly Rust due to wacore-binary portable_simd)
whatsapp-rust = { version = "0.2", default-features = true, optional = true }
wacore = { version = "0.2", optional = true }
waproto = { version = "0.2", optional = true }
whatsapp-rust-tokio-transport = { version = "0.2", optional = true }
whatsapp-rust-ureq-http-client = { version = "0.2", optional = true }
whatsapp-rust-sqlite-storage = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "utils"
assets = [
    ["target/release/vatic", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/vatic", dest = "/usr/bin/vatic", mode = "0755" },
]
